# vahlen

./: .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md
cmake/: FindEigen3.cmake
include/vahlen/: vahlen.h
src/: motor.cpp
